# galr

./: .flake8  .gitignore  LICENSE  MANIFEST.in  PUBLISHING.md  README.md  RELEASE.md  UPLOAD_INSTRUCTIONS.md  pyproject.toml  tutorial.ipynb
.github/workflows/: ci.yml  publish.yml  release.yml  version-check.yml
scripts/: update_version.py
src/galr/: __init__.py  galr.py
tests/: __init__.py  test_galr.py
