[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "galr"
version = "0.1.0"
description = "Gated Asymmetric Linear Regression - 特徴量に応じてコスト比を学習する回帰モデル"
readme = "README.md"
requires-python = ">=3.8"
license = "MIT"
license-files = ["LICENSE"]
authors = [
    {name = "Yuto TAKAGI", email = "yutotakagi.for.business@gmail.com"}
]
keywords = ["regression", "asymmetric", "cost-sensitive", "machine-learning", "sklearn"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
# PyPI公開用のURL（GitHubリポジトリなど）
# [project.urls]
# Homepage = "https://github.com/yut0takagi/galr"
# Documentation = "https://github.com/yut0takagi/galr#readme"
# Repository = "https://github.com/yut0takagi/galr"
# Issues = "https://github.com/yut0takagi/galr/issues"

dependencies = [
    "numpy>=1.20.0",
    "scikit-learn>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "flake8>=6.0.0",
    "mypy>=1.0.0",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.black]
line-length = 100
target-version = ['py38']

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true

